--- a/web-tracker/src/index.css
+++ b/web-tracker/src/index.css
@@ -68,7 +68,7 @@ form {
   border-radius: 4px;
 }
 
-.input-group .btn {
+.input-group .btn, .form-container .btn  {
   padding: 10px 20px;
   width: 10rem;
   font-size: 16px;
@@ -80,7 +80,7 @@ form {
   cursor: pointer;
 }
 
-.input-group .btn:hover {
+.input-group .btn:hover, .form-container .btn:hover {
   background-color: #45a049;
 }
 
@@ -118,3 +118,43 @@ form {
       height: 300px; /* Ajustez la hauteur pour les écrans plus petits */
   }
 }
+
+/*-------------- aligner les formulaires admin et ls listes --------------*/
+.flex-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-bottom: 40px;
+}
+
+.form-container,
+.list-container {
+  flex: 1;
+  min-width: 300px;
+}
+
+.input {
+  display: block;
+  width: 80%;
+  margin-bottom: 10px;
+  padding: 8px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  padding: 8px;
+  border-bottom: 1px solid #ddd;
+}
+
+@media (max-width: 768px) {
+  .form-container,
+  .list-container {
+      flex: 1 1 100%;
+  }
+}
+
